--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -1,5 +1,5 @@
 
-    <h1>caryous说明</h1>
+    <h1>Atong说明</h1>
     <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
     <div class="panel panel-default">
         <div class="panel-heading">Panel heading without title</div>
