--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -1,28 +1,26 @@
 
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <h3 class="panel-title">用户列表  总数：{{length}}</h3>
+        <h3 class="panel-title">用户列表  用户总数：{{length}}</h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body"  ng-controller="usersControl">
         <div class="list-group"  selector="div">
             <div class="list-group-item">
                 <div>#index</div>
                 <div>faceImg</div>
                 <div>uid</div>
                 <div>likename</div>
-                <div>logTimes</div>
+                <div>登录次数</div>
+                <div>最后登录</div>
             </div>
-            {{#each users}}
-            <div class="list-group-item" rel="uid:{{uid}},likename:{{likename}}">
-                <div>{{@index}}</div>
-                <div>{{#if faceImg}}yes{{else}}--{{/if}}</div>
-                <div>{{uid}}</div>
-                <div>{{likename}}</div>
-                <div>{{logTimes}}</div>
-                <div class="car-change"><a rel="" href="#">修改</a></div>
+            <div ng-repeat="user in users" class="list-group-item">
+                <div><%$index+1%></div>
+                <div><% user.faceImg|vNull  %></div>
+                <div><% user.uid%></div>
+                <div><% user.likename%></div>
+                <div><% user.logTimes%></div>
+                <div><% user.lastTime%></div>
             </div>
-            {{/each}}
-
         </div>
     </div>
 </div>
