--- a/public/css/common.css
+++ b/public/css/common.css
@@ -4,8 +4,9 @@
     height: 40px;
 }
 .list-group-item div{
-    width : 15%;
+    width : 12%;
     float : left;
+    overflow: hidden;
 }
 .list-group-item div.car-change{
 
