--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -3,8 +3,8 @@
     <div class="panel-heading">
         <h3 class="panel-title">用户列表  用户总数：{{length}}</h3>
     </div>
-    <div class="panel-body"  ng-controller="usersControl">
-        <div class="list-group"  selector="div">
+    <div class="panel-body"  ng-controller="usersControl" >
+        <div class="list-group"  selector="div" ngd-click="itemClick($event)">
             <div class="list-group-item">
                 <div>#index</div>
                 <div>faceImg</div>
@@ -12,17 +12,38 @@
                 <div>likename</div>
                 <div>登录次数</div>
                 <div>最后登录</div>
+                <div>操作</div>
             </div>
-            <div ng-repeat="user in users" class="list-group-item">
+            <div ng-repeat="user in users" class="list-group-item" rel="uid:<% user.uid%>">
                 <div><%$index+1%></div>
                 <div><% user.faceImg|vNull  %></div>
                 <div><% user.uid%></div>
                 <div><% user.likename%></div>
                 <div><% user.logTimes%></div>
-                <div><% user.lastTime%></div>
+                <div><% user.lastTime| date : 'yyyy-MM-dd'%></div>
+                <div class="car-change"><a href="#" rel="e:edit" class="edit">修改</a><span>删除</span></div>
             </div>
         </div>
     </div>
+
+
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">I'm a modal!</h3>
+        </div>
+        <div class="modal-body">
+            <ul>
+                <li ng-repeat="item in items">
+                    <a ng-click="selected.item = item"><% item %></a>
+                </li>
+            </ul>
+            Selected: <b><% selected.item %></b>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 </div>
 
 <script>
