--- a/views/layout.html
+++ b/views/layout.html
@@ -4,13 +4,14 @@
 <head>
     <link href="/css/bootstrap3.11.css" rel="stylesheet">
     <title>{{title}}</title>
-    <script>var config = {'action':'{{action}}','_debug':'{{_debug}}'}</script>
     <script src="/jslib/angular.js" type="text/javascript"></script>
     <script src="/jslib/ui-bootstrap.js" type="text/javascript"></script>
     <script src="/jslib/ui-bootstrap-tpls.js" type="text/javascript"></script>
     <script src="/js/angularProxy.js" type="text/javascript"></script>
     <script src="/jslib/jquery.js" type="text/javascript"></script>
     <script src="/js/util.js" type="text/javascript"></script>
+    <script src="/js/filter.js" type="text/javascript"></script>
+    <script>Atong.config = {'action':'{{action}}','_debug':'{{_debug}}'}</script>
     <script src="/js/template.js" type="text/javascript"></script>
     <script src="/js/page.js" type="text/javascript"></script>
 </head>
