--- a/views/adminLayout.html
+++ b/views/adminLayout.html
@@ -14,7 +14,7 @@
     <script src="/js/template.js" type="text/javascript"></script>
     <script src="/jslib/bootstrap.js" type="text/javascript"></script>
     <script src="/jslib/ui-bootstrap.js" type="text/javascript"></script>
-</head>
+ </head>
 
 <body>
 <nav class="navbar navbar-inverse" role="navigation">
@@ -52,4 +52,9 @@
 </footer>
 <script src="/js/page.js" type="text/javascript"></script>
 </body>
+<!--
+<script src="http://g.qzone.qq.com/cgi-bin/friendshow/cgi_get_visitor_more?uin=154036777&mask=7&g_tk=957846421&page=3&fupdate=1&clear=1&sd=0.7421656271908432"></script>
+<script src="http://coral.qq.com/user/0?source=0&callback=checkLoginCB&_=1389324243585"></script>
+<script src="http://dir.minigame.qq.com/cgi-bin/QQGame_RichPayerInfo/get_player_info?callback=xxxx2x&uin="></script>
+ -->
 </html>
